[tool.poetry]
name = "apis-instance-tbf"
version = "0.1.0"
description = "Thomas Bernhard Forschungsplattform"
authors = ["K Kollmann <dev-kk@oeaw.ac.at>"]


[tool.poetry.dependencies]
python = "^3.11"
apis-acdhch-default-settings = "^1.4.0"
apis-core-rdf = {git = "https://github.com/acdh-oeaw/apis-core-rdf", rev = "v0.29.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
