[tool.poetry]
name = "apis-instance-tbf"
version = "0.1.0"
description = "Thomas Bernhard Forschungsplattform"
authors = ["K Kollmann <dev-kk@oeaw.ac.at>"]


[tool.poetry.dependencies]
python = "^3.11"
apis-acdhch-default-settings = "^1.4.0"
apis-core-rdf = {git = "https://github.com/acdh-oeaw/apis-core-rdf", rev = "v0.29.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
deptry = "^0.20.0"
django-debug-toolbar = "^4.4.6"
djlint = "^1.35.2"
pylint = "^3.3.1"
ruff = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
